--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #6a1b9a; /* 紫色 */
+  --ifm-color-primary-dark: #5c1790; /* 深紫色 */
+  --ifm-color-primary-darker: #4e1380; /* 更深紫色 */
+  --ifm-color-primary-darkest: #3f0f70; /* 最深紫色 */
+  --ifm-color-primary-light: #7b2cbf; /* 浅紫色 */
+  --ifm-color-primary-lighter: #8c4df3; /* 更浅紫色 */
+  --ifm-color-primary-lightest: #9d7fe4; /* 最浅紫色 */
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #7c4dff; /* 暗模式下的紫色 */
+  --ifm-color-primary-dark: #6a40ff; /* 暗模式下的深紫色 */
+  --ifm-color-primary-darker: #5e35b1; /* 暗模式下的更深紫色 */
+  --ifm-color-primary-darkest: #512da8; /* 暗模式下的最深紫色 */
+  --ifm-color-primary-light: #8e99f3; /* 暗模式下的浅紫色 */
+  --ifm-color-primary-lighter: #b388ff; /* 暗模式下的更浅紫色 */
+  --ifm-color-primary-lightest: #d1c4e9; /* 暗模式下的最浅紫色 */
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
