--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -44,7 +44,7 @@
 .subtitle {
   font-size: 1.5rem;
   max-width: 600px;
-  margin-bottom: 2rem;
+  margin-bottom: 120px;
 }
 
 .quoteButton {
@@ -126,4 +126,22 @@
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
+
+.typewriter {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 3px solid; /* 模拟光标 */
+  animation: blink-caret 0.75s step-end infinite;
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
 }
